[gd_scene load_steps=4 format=2]

[ext_resource path="res://items/item_pickup.gd" type="Script" id=1]

[sub_resource type="CylinderShape" id=1]
height = 0.485398
radius = 0.237478

[sub_resource type="SphereShape" id=2]
radius = 0.529917

[node name="item_pickup" type="KinematicBody" groups=["distance_activated", "push"]]
collision_layer = 0
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.24368, 0 )
shape = SubResource( 1 )

[node name="pickup_timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="area" type="Area" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="area"]
shape = SubResource( 2 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0514801, 0 )
omni_range = 0.391052

[connection signal="timeout" from="pickup_timer" to="." method="_on_pickup_timer_timeout"]
[connection signal="body_entered" from="area" to="." method="_on_area_body_entered"]
